map-app/styles/style.css - stop lower sidebar scrollbar showing through
For some reason, the undermost (leftmost, on larger displays) sidebar
layer's scrollbar shows through the uppermost (rightmost, ditto),
unless we tweak the z-index like this.

--- a/www/map-app/styles/style.css
+++ b/www/map-app/styles/style.css
@@ -368,6 +368,10 @@ body {
   background-color: white;
 }
 
+.sea-main-sidebar {
+  z-index: inherit; /* attempt to stop scrollbar showing through */
+}
+
 .sea-initiatives-list-sidebar-content,
 .sea-initiative-sidebar-content {
   display: flex;
